--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
   align-items:center;
 }
 
-#left p {
+.left p {
   font-size: 20px;
 }
 form{
@@ -48,6 +48,7 @@ input[type="password"] {
 	color:white;
 	font-size: 16px;
     cursor: pointer;
+	border:none;
 }
 a{
 	text-decoration:none;
